fixed overflowing terminal

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
     line-height: 12px;
     margin: 0ex;
     width: 80ex;
-    height: 43em;
+    height: 69ex;
     overflow: hidden;
     margin: auto auto 0em auto;
 }
